calendar overflow fixes

--- a/frontend/src/styles/event.module.css
+++ b/frontend/src/styles/event.module.css
@@ -2,6 +2,7 @@
     padding: 5px;
     margin: 5px;
     border-radius: 8px;
+    min-width: 40vw;
 }
 
 .eventoverview {
