--- a/frontend/src/styles/layout.module.css
+++ b/frontend/src/styles/layout.module.css
@@ -1,15 +1,15 @@
 .layout {
     width: 100%;
+    height: 100dvh;
 }
 
 .main {
     flex-grow: 1;
-    overflow: scroll;
     max-height: 65%;
 }
 
 .navbar {
-    max-height: 10vh;
+    max-height: 7vh;
     display: flex;
     position: fixed;
     bottom: 0;
