--- a/frontend/src/styles/month.module.css
+++ b/frontend/src/styles/month.module.css
@@ -18,3 +18,7 @@
 .calendarnav {
     margin: 0;
 }
+
+.eventlist {
+    overflow-x: auto;
+}
